# rigor-rs

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  UPSTREAM.md  clippy.toml  rustfmt.toml
.github/workflows/: ci.yml  docs.yml  release.yml
HomebrewFormula/: README.md  rigor.rb
crates/rigor-cli/: Cargo.toml
crates/rigor-cli/src/: annotate.rs  baseline.rs  bleeding_edge.rs  bundler.rs  ci_detector.rs  config.rs  config_audit.rs  coverage.rs  diagnostic_formats.rs  diff.rs  docs.rs  doctor.rs  explain.rs  init.rs  lsp.rs  main.rs  mcp.rs  outline.rs  plugins_cmd.rs  rbs_collection.rs  ruby_mode.rs  severity.rs  sidecar.rb  sidecar.rs  sig_gen.rs  triage.rs  type_display.rs  type_of.rs
crates/rigor-cli/src/sig_gen/: sig_env.rs
crates/rigor-cli/tests/: baseline_drift_roots.rs  check.rs
crates/rigor-index/: Cargo.toml  build.rs
crates/rigor-infer/: Cargo.toml
crates/rigor-parse/: Cargo.toml
crates/rigor-rules/: Cargo.toml
crates/rigor-types/: Cargo.toml
docs/: CURRENT_WORK.md  PORT_BACKLOG.md
docs/adr/: 0001-rust-reimplementation-strategy.md  0002-diagnostic-set-parity.md  0003-prism-rust-bindings.md  0004-own-the-index-layer.md  0005-rust-architecture.md  0006-incremental-computation.md  0007-rbs-stdlib-shipping.md  0008-real-ruby-sidecar.md  0009-config-baseline-compatibility.md  0010-distribution.md  0011-reference-oracle-exceptions.md  0012-internal-ast-lowering.md  0013-plugin-architecture.md  0014-diagnostic-output-formats.md  0015-cli-surface-compatibility.md  0016-never-crash-isolation.md  0017-analysis-cache.md  0018-certainty-and-relations.md  0019-value-lattice-and-dynamic-algebra.md  0020-normalization-and-determinism.md  0021-robustness-principle.md  0022-control-flow-scopes-and-facts.md  0023-method-dispatch-tiers.md  0024-inference-budgets.md  0025-structural-and-object-shape-model.md  0026-rbs-extended-and-flow-effects.md  0027-plugin-contract.md  0028-cache-descriptor-and-incremental.md  0029-lsp-architecture.md  0030-diagnostic-schema-and-severity.md  0031-config-and-command-semantics.md  0032-source-formatting-policy.md  0033-project-sig-ingestion.md  0034-rbs-collection-ingestion.md  0035-inline-rbs-deferred.md  0036-ruby-sidecar-default-reversal.md  0037-sidecar-perf-slices-retired-by-measurement.md  0038-flow-substrate-incremental-narrowing.md  0039-shape-typing-tier.md  0040-directory-path-argument-support.md  (+2 more)
docs/agents/: domain.md  issue-tracker.md
docs/notes/: 20260626-spike-findings.md  20260706-adr0038-slice1-audit.md  20260706-adr0039-shape-tier-audit.md  20260706-flow-frontier-exhausted.md  20260706-nil-flow-substrate-recon.md  20260706-productization-audit.md  20260706-slice1-array-fold-blocker.md  20260710-plugin-engine-design.md  20260710-pure-rbs-bundle-track-closed.md  20260710-siggen-env-classification-design.md  20260710-siggen-writer-update-design.md  20260711-conditional-assign-nilability-spec.md  20260711-coverage-frontier-remeasured.md  20260711-siggen-params-observed-substrate-blocked.md  20260716-ivar-write-mismatch-spec.md  20260716-literal-tail-fold-spec.md  20260716-mutation-widening-fp-spec.md  20260716-upstream-feedback.md  20260716-v030-inference-cluster-spec.md  20260716-v030-syntactic-rules-spec.md  20260716-v030-typed-rules-spec.md  20260716-v030-upstream-gap-survey.md  20260717-atm-substrate-arc-plan.md  20260717-c3a-nominal-return-tail-spec.md  20260717-constant-shadow-gate-spec.md  20260717-p2-optional-local-nil-spec.md  20260717-tier-bc-track-closed.md  20260718-bleeding-edge-void-rule.md  20260718-compat-next-stage-plan.md  20260718-m2-receiver-typing-batch.md  20260718-phase0-m1-m2-findings.md  20260718-phase3-new-rule-surfaces.md  20260718-severity-profile-machinery.md  20260718-upstream-rbs-inline-autowire-regressions.md  20260718-upstream-rc-bump-47ec8625-7a69f142.md  20260719-adr0042-gate-deliverables.md  20260719-adr0042-slices-1-2.md  20260719-adr0042-slices-3-4.md  20260719-baseline-drift-roots-fix.md  20260719-coverage-broader-audit.md  (+7 more)
gem/: README.md  Rakefile  rigortype-rs.gemspec
gem/exe/: rigor
gem/lib/: rigortype_rs.rb
gem/sig/: rigortype_rs.rbs
gem/spec/: binary_resolution_spec.rb
harness/: CORPUS.md  README.md  divergence-registry.yml  docs_check.py  fp_audit.py  lib.rb  run.rb  run_corpus.rb  run_snapshot.rb  snapshot.rb
harness/corpus/: 01_string_typo.rb  02_chained_typo.rb  03_known_method_silent.rb  04_dynamic_receiver_silent.rb  05_fold_then_typo.rb  06_integer_typo.rb  07_wrong_arity.rb  08_nil_receiver.rb  09_wrong_arity_gsub.rb  10_realistic_valid.rb  11_integer_typo.rb  12_alias_methods_valid.rb  13_suppress_line.rb  14_suppress_file.rb  15_in_source_return_chain.rb  16_in_source_param_return_silent.rb  17_plugin_activesupport_core_ext.rb  17_plugin_activesupport_core_ext.rigor.yml  18_plugin_gate_no_config.rb  19_in_source_param_bound_chain.rb  20_in_source_param_bound_silent.rb  21_dead_assignment.rb  22_dead_assignment_skips.rb  23_override_visibility_superclass.rb  24_override_visibility_module.rb  25_override_visibility_negatives.rb  26_override_visibility_reopened.rb  27_nil_receiver_fires.rb  28_nil_receiver_negatives.rb  29_always_raises.rb  30_always_raises_negatives.rb  31_unreachable_branch.rb  32_unreachable_branch_negatives.rb  33_always_truthy.rb  34_always_truthy_negatives.rb  35_unresolved_toplevel.rb  36_unresolved_toplevel_negatives.rb  37_project_sig_new.rb  38_project_sig_negatives.rb  39_rbs_collection_new.rb  (+31 more)
harness/snapshots/: 01_string_typo.json  02_chained_typo.json  03_known_method_silent.json  04_dynamic_receiver_silent.json  05_fold_then_typo.json  06_integer_typo.json  07_wrong_arity.json  08_nil_receiver.json  09_wrong_arity_gsub.json  10_realistic_valid.json  11_integer_typo.json  12_alias_methods_valid.json  13_suppress_line.json  14_suppress_file.json  15_in_source_return_chain.json  16_in_source_param_return_silent.json  17_plugin_activesupport_core_ext.json  (+53 more)
spike/: probe_prism.rb  probe_rbs.rb
spike/rbs_probe/: Cargo.toml
spike/rbs_probe/src/: main.rs
(+30 files in other folders)
