[package]
name = "rigor-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "rigor"
path = "src/main.rs"

[dependencies]
rigor-parse = { path = "../rigor-parse" }
rigor-rules = { path = "../rigor-rules" }
rigor-index = { path = "../rigor-index" }
rigor-infer = { path = "../rigor-infer" }
rigor-types = { path = "../rigor-types" }
# Config loader (.rigor.yml) deps — all already present in Cargo.lock / cached
# (serde 1.0.228, serde_yaml 0.9.34, glob 0.3.3); no network fetch needed.
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
glob = "0.3"
# SARIF output is built as a serde_json::Value tree (already in Cargo.lock).
serde_json = "1"
# Baseline message-mode rows are Ruby-`Regexp.escape`d sources matched as
# regexes (reference ADR-22). `regex` 1.12.3 is already in Cargo.lock as a
# transitive dep and cached in ~/.cargo/registry, so this is offline-safe.
regex = "1"
