[package]
name = "rigor-cli"
version.workspace = true
edition.workspace = true
# Distribution metadata (§13, ADR-0010). repository/license are inherited from
# the workspace; the binary-crate-specific description/homepage live here.
repository.workspace = true
license.workspace = true
description = "Inference-first static analysis for Ruby — a self-contained, sound-subset Rust port of the rigor analyzer."
homepage = "https://github.com/rigortype/rigor-rs"

[[bin]]
name = "rigor"
path = "src/main.rs"

# cargo-binstall (https://github.com/cargo-bins/cargo-binstall) fetches a
# prebuilt asset published by the release workflow instead of building from
# source. The release asset is `rigor-<version>-<target>.tar.gz` containing the
# bare `rigor` binary at the archive root (see .github/workflows/release.yml).
# Template variables per current cargo-binstall docs: `{ repo }`, `{ version }`
# (the bare crate version, no leading `v`), `{ target }`, `{ archive-suffix }`
# (e.g. `.tar.gz`, derived from pkg-fmt), `{ binary-ext }` (`.exe` on Windows,
# empty elsewhere). The download tag is `v{ version }`, matching the workflow's
# `on: push: tags: ["v*.*.*"]` trigger.
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/rigor-{ version }-{ target }{ archive-suffix }"
pkg-fmt = "tgz"
bin-dir = "rigor{ binary-ext }"

[dependencies]
rigor-parse = { path = "../rigor-parse" }
rigor-rules = { path = "../rigor-rules" }
rigor-index = { path = "../rigor-index" }
rigor-infer = { path = "../rigor-infer" }
rigor-types = { path = "../rigor-types" }
# Config loader (.rigor.yml) deps — all already present in Cargo.lock / cached
# (serde 1.0.228, serde_yaml 0.9.34, glob 0.3.3); no network fetch needed.
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
glob = "0.3"
# SARIF output is built as a serde_json::Value tree (already in Cargo.lock).
serde_json = "1"
# Baseline message-mode rows are Ruby-`Regexp.escape`d sources matched as
# regexes (reference ADR-22). `regex` 1.12.3 is already in Cargo.lock as a
# transitive dep and cached in ~/.cargo/registry, so this is offline-safe.
regex = "1"
